Day3 ( 2)
+ Update working on miner broadcast mined block